objects/Lead.object
<CustomObject><fields>
        <fullName>Comp_List_Magazine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comp List Magazine</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Company_Street_1__c</fullName>
        <formula>IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),"")),
  npsp__CompanyStreet__c,
  IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1), npsp__CompanyStreet__c)),
    IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1), npsp__CompanyStreet__c)),
      ""
      )
    )
  )</formula>
        <label>Company Street 1</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Company_Street_2__c</fullName>
        <formula>IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    MID(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)+1, LEN(npsp__CompanyStreet__c)),
    IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(SUBSTITUTE(npsp__CompanyStreet__c, LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(npsp__CompanyStreet__c, LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)), "")))
      ,""
      )
    )
  )</formula>
        <label>Company Street 2</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Company_Street_3__c</fullName>
        <formula>IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    "",
    IF(LEN(npsp__CompanyStreet__c) = LEN(SUBSTITUTE(npsp__CompanyStreet__c, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
        SUBSTITUTE(SUBSTITUTE(npsp__CompanyStreet__c, LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)), ""),LEFT(SUBSTITUTE(npsp__CompanyStreet__c, LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(npsp__CompanyStreet__c, LEFT(npsp__CompanyStreet__c, FIND(MID($Setup.Global__c.CRLF__c,3,1),npsp__CompanyStreet__c)), ""))) ,"")
      ,""
      )
    )
  )</formula>
        <label>Company Street 3</label>
        <type>Text</type>
    </fields><fields>
        <fullName>OLD_ID__c</fullName>
        <label>OLD ID</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Street_1__c</fullName>
        <formula>IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),"")),
  Street,
  IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1), Street)),
    IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1), Street)),
      ""
      )
    )
  )</formula>
        <label>Street 1</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Street_2__c</fullName>
        <formula>IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    MID(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)+1, LEN(Street)),
    IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
      LEFT(SUBSTITUTE(Street, LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(Street, LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)), "")))
      ,""
      )
    )
  )</formula>
        <label>Street 2</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Street_3__c</fullName>
        <formula>IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),"")),
  "",
  IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+1,
    "",
    IF(LEN(Street) = LEN(SUBSTITUTE(Street, MID($Setup.Global__c.CRLF__c,3,1),""))+2,
        SUBSTITUTE(SUBSTITUTE(Street, LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)), ""),LEFT(SUBSTITUTE(Street, LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)), ""), FIND(MID($Setup.Global__c.CRLF__c,3,1),SUBSTITUTE(Street, LEFT(Street, FIND(MID($Setup.Global__c.CRLF__c,3,1),Street)), ""))) ,"")
      ,""
      )
    )
  )</formula>
        <label>Street 3</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>ReadWriteTransfer</sharingModel><listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews><listViews>
        <fullName>From_Pardot</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pi__url__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>From Pardot</label>
    </listViews><listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews><listViews>
        <fullName>My_Unconverted_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <label>My Unconverted Leads</label>
    </listViews><listViews>
        <fullName>Today_s_Lead_s</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today's Leads</label>
    </listViews></CustomObject>